part4/4.07/other-manifests/traefik-dashboard.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
  namespace: kube-system
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`traefik.local`)
      kind: Rule
      services:
        - name: api@internal
  tls:
    certResolver: default
